--- a/D3/main.tex
+++ b/D3/main.tex
@@ -51,7 +51,7 @@
 % Header and footer setup
 \pagestyle{fancy}
 \fancyhf{}
-\fancyhead[L]{\textcolor{darkgray}{\small MD-P1-Report}}
+\fancyhead[L]{\textcolor{darkgray}{\small Data Mining}}
 \fancyhead[R]{\textcolor{darkgray}{\small Group 6}}
 \fancyfoot[C]{\textcolor{lightgray}{\thepage}}
 \renewcommand{\headrulewidth}{0.5pt}
