Add figures for preprocessing and descriptive statistics

--- a/D3/main.tex
+++ b/D3/main.tex
@@ -315,5 +315,22 @@ T12-T14: Final sections & \textcolor{primaryblue}{\textbf{X}} & \textcolor{prima
 
 \newpage
 \section{Preprocessing}
+\foreach \i in {1,...,7}{%
+    \begin{figure}[H]
+        \centering
+        \includegraphics[width=\textwidth]{Imatges/pre\i.png}
+        \caption{Imagen \i}
+    \end{figure}
+}
+
+\newpage
+\section{Basic Initial Univariate Descriptive Statistics of Raw Variables}
+\foreach \i in {1,...,61}{%
+    \begin{figure}[H]
+        \centering
+        \includegraphics[width=\textwidth]{Imatges/des\i.png}
+        \caption{Imagen \i}
+    \end{figure}
+}
 
 \end{document}
