--- a/D3/main.tex
+++ b/D3/main.tex
@@ -319,7 +319,7 @@ T12-T14: Final sections & \textcolor{primaryblue}{\textbf{X}} & \textcolor{prima
     \begin{figure}[H]
         \centering
         \includegraphics[width=\textwidth]{Imatges/pre\i.png}
-        \caption{Imagen \i}
+        \caption{Image \i}
     \end{figure}
 }
 
@@ -329,7 +329,7 @@ T12-T14: Final sections & \textcolor{primaryblue}{\textbf{X}} & \textcolor{prima
     \begin{figure}[H]
         \centering
         \includegraphics[width=\textwidth]{Imatges/des\i.png}
-        \caption{Imagen \i}
+        \caption{Image \i}
     \end{figure}
 }
 
