Add figures for metadata section in main.tex

--- a/D3/main.tex
+++ b/D3/main.tex
@@ -311,7 +311,12 @@ T12-T14: Final sections & \textcolor{primaryblue}{\textbf{X}} & \textcolor{prima
 
 \newpage
 \section{Metadata}
-
+\foreach \i in {1,...,8}{%
+    \begin{figure}[H]
+        \centering
+        \includegraphics[width=\textwidth]{Imatges/metadata\i.png}
+    \end{figure}
+}
 
 \newpage
 \section{Preprocessing}
