Update Preprocessing section to include images directly
Replaced loop for figure inclusion with individual images.

--- a/D3/main.tex
+++ b/D3/main.tex
@@ -320,12 +320,22 @@ T12-T14: Final sections & \textcolor{primaryblue}{\textbf{X}} & \textcolor{prima
 
 \newpage
 \section{Preprocessing}
-\foreach \i in {1,...,7}{%
-    \begin{figure}[H]
-        \centering
-        \includegraphics[width=\textwidth]{Imatges/pre\i.png}
-    \end{figure}
-}
+\newpage
+\section{Preprocessing}
+\centering
+\includegraphics[width=\textwidth]{Imatges/pre1.png}
+\centering
+\includegraphics[width=\textwidth]{Imatges/pre2.png}
+\centering
+\includegraphics[width=\textwidth]{Imatges/pre3.png}
+\centering
+\includegraphics[width=\textwidth]{Imatges/pre4.png}
+\centering
+\includegraphics[width=\textwidth]{Imatges/pre5.png}
+\centering
+\includegraphics[width=\textwidth]{Imatges/pre6.png}
+\centering
+\includegraphics[width=\textwidth]{Imatges/pre7.png}
 
 \newpage
 \section{Basic Initial Univariate Descriptive Statistics of Raw Variables}
