\newpage to make space

--- a/D3/main.tex
+++ b/D3/main.tex
@@ -322,6 +322,7 @@ T12-T14: Final sections & \textcolor{primaryblue}{\textbf{X}} & \textcolor{prima
 \section{Preprocessing}
 \centering
 \includegraphics[width=\textwidth]{Imatges/pre1.png}
+\newpage
 \centering
 \includegraphics[width=\textwidth]{Imatges/pre2.png}
 \centering
