--- a/D3/main.tex
+++ b/D3/main.tex
@@ -307,42 +307,15 @@ T12-T14: Final sections & \textcolor{primaryblue}{\textbf{X}} & \textcolor{prima
 \label{tab:assignments}
 \end{table}
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\newpage
+\include{metadata.tex}
 
 
-\newpage
-\section{Metadata}
-\foreach \i in {1,...,8}{%
-    \begin{figure}[H]
-        \centering
-        \includegraphics[width=\textwidth]{Imatges/metadata\i.png}
-    \end{figure}
-}
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \newpage
-\section{Preprocessing}
-\centering
-\includegraphics[width=\textwidth]{Imatges/pre1.png}
-\newpage
-\centering
-\includegraphics[width=\textwidth]{Imatges/pre2.png}
-\centering
-\includegraphics[width=\textwidth]{Imatges/pre3.png}
-\centering
-\includegraphics[width=\textwidth]{Imatges/pre4.png}
-\centering
-\includegraphics[width=\textwidth]{Imatges/pre5.png}
-\centering
-\includegraphics[width=\textwidth]{Imatges/pre6.png}
-\centering
-\includegraphics[width=\textwidth]{Imatges/pre7.png}
+\include{preprocessing.tex}
 
-\newpage
-\section{Basic Initial Univariate Descriptive Statistics of Raw Variables}
-\foreach \i in {1,...,61}{%
-    \begin{figure}[H]
-        \centering
-        \includegraphics[width=\textwidth]{Imatges/des\i.png}
-    \end{figure}
-}
 
 \end{document}
